[package]
name = "betternpm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flate2 = { version = "1.0.25", features = ["zlib"] }
futures = "0.3.25"
reqwest = { version = "0.11.13", features = ["json", "blocking"] }
tar = "0.4.38"
tokio = { version = "1.24.1", features = ["full"] }
